data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3809.wast
;; 8. **Test with Recursive Call Targets in `br_table`**:    - **Description**: Implement recursive function calls within `br_table` targets to verify proper stack unwinding and recursion depth handling.    - **Constraint Checked**: Stack depth and recursion.    - **Edge Case Relation**: Ensures that recursion and stack unwinding are handled correctly without overflow or underflow.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $test
      (local.get 0)
      (br_table 0 (call $test (i32.add (local.get 0) (i32.const 1))))
    )
  )
  "type mismatch"
)